# Vehicle_Upsell_Studio

./: INSTALL.md  README.md  app.py  app.yaml  deploy.sh  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  store.ts  types.ts  ui.tsx
frontend/src/pages/: Builder.tsx  Compare.tsx  Components.tsx  Configs.tsx  Deploy.tsx  Distribution.tsx  Help.tsx  Settings.tsx
jobs/: generate_sample_data.py  run_upsell_config.py
scripts/: setup_workspace.py
server/: aiquery.py  bootstrap_sql.py  config.py  llm.py  sql.py
server/routes/: components.py  configs.py  deploy.py  models.py  prompt.py  runs.py  sample.py  settings_route.py
